[gd_scene load_steps=2 format=2]

[ext_resource path="res://Control.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 20

[node name="Hello" type="Button" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 186.0
size_flags_vertical = 3
text = "Hello"

[node name="Hi" type="Button" parent="VBoxContainer"]
margin_top = 206.0
margin_right = 1024.0
margin_bottom = 393.0
size_flags_vertical = 3
text = "Hi"

[node name="ModifyParams" type="Button" parent="VBoxContainer"]
margin_top = 413.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_vertical = 3
text = "Modify Params"

[connection signal="pressed" from="VBoxContainer/Hello" to="." method="_on_Hello_pressed"]
[connection signal="pressed" from="VBoxContainer/Hi" to="." method="_on_Hi_pressed"]
[connection signal="pressed" from="VBoxContainer/ModifyParams" to="." method="_on_ModifyParams_pressed"]
